<resources>
    <string name="app_name">MRMAPro1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_expense_fragment">ADD EXPENSE</string>
    <string name="how_much_fragment">How much?</string>
    <string name="expense_name_fragment">Expense name</string>
    <string name="expense_button_fragment">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="expense_list_filter">Filter by expense name dynamically</string>
    <string name="expense_list_button">Category</string>
    <string name="expense_list_category">Apply cat.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="total_pie">Total: </string>

    <string name="category_add_text">ADD CATEGORY</string>
    <string name="cateogry_name">Category name</string>

    <string name="single_remove">Remove</string>
    <string name="single_details">Details</string>


</resources>
