<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_expense_fragment"
            android:gravity="center"
            android:padding="20dp"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/expense_name_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_name_fragment"
            android:padding="20dp"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/expense_cost_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="30dp"
            android:text="@string/how_much_fragment"/>

        <Spinner
            android:id="@+id/add_expense_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="30dp"
            >


        </Spinner>

        <Button
            android:id="@+id/add_expense_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="30dp"
            android:text="@string/expense_button_fragment"/>


    </LinearLayout>


</FrameLayout>