<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CategoryFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    >

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_add_text"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/category_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cateogry_name" />

        <Button
            android:id="@+id/cateogry_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_expense_fragment"
            android:layout_margin="10dp"/>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        >

    </androidx.recyclerview.widget.RecyclerView>



</LinearLayout>